<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:padding="@dimen/list_item_padding">

        <ImageView
            android:id="@+id/iv_country_flag"
            android:layout_width="@dimen/flag_image_view_size"
            android:layout_height="@dimen/flag_image_view_size"
            android:src="@drawable/bra" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/list_item_padding">

            <TextView
                android:id="@+id/tv_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bra_name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capital"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/tv_country_capital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/short_margin"
                    android:text="@string/bra_capital"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/black"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:text="@string/language"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/tv_country_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/short_margin"
                    android:text="@string/bra_language"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/black"
                    android:textStyle="italic" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</LinearLayout>